--- a/case_study.ipynb
+++ b/case_study.ipynb
@@ -379,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## compound heterozygous\n",
+    "## compound heterozygous with deseq2 results\n",
     "with open(\"/Users/johnlee/jupyter/new_case/case_study_trio/sourcefiles/C4RCD_0637-VS-UNAFFECTED.DESeq2_results.txt.deseq.vcf\", 'rt') as vcf, open(\"/Users/johnlee/jupyter/new_case/case_study_trio/aut_rec.gene_list.txt\", \"rt\") as gene_list, open('aut_rec.genes.vcf', 'w') as output:\n",
     "    genes = []\n",
     "    for line in gene_list:\n",
